# docs/swagger.json
@@ -160,6 +160,49 @@
                     }
                 }
             }
+        },
+        "/api/v1/test/suggest": {
+            "post": {
+                "description": "메뉴를 제안한다",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "메뉴 제안",
+                "parameters": [
+                    {
+                        "description": "request suggest menu body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.SuggestTestRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/controller.CommonResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/controller.SuggestMenuRequest"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -186,6 +229,14 @@
                     "items": {
                         "type": "string"
                     }
+                }
+            }
+        },
+        "controller.SuggestTestRequest": {
+            "type": "object",
+            "properties": {
+                "prompt": {
+                    "type": "string"
                 }
             }
         },
